# examples

./: .gitignore  .travis.yml  Cargo.toml  README.md
3d/lights/: Cargo.toml
3d/lights/src/: main.rs
assets/hello_qml/: MyItem.qmlc  main.qmlc
charts/chart/: Cargo.toml
charts/chart/src/: main.rs
ci/: run.bash
core/logging/: Cargo.toml
core/logging/src/: main.rs
core/mime_types/: Cargo.toml
core/mime_types/src/: main.rs
other/: Cargo.toml
other/assets/hello_qml/: main.qml
qml/hello_qml/: Cargo.toml  build.rs
qml/hello_qml/assets/: MyItem.qml
qml/hello_qml/src/: main.rs
qt_macros/: Cargo.toml
qt_macros/src/: lib.rs
widgets/basic_form/: Cargo.toml
widgets/basic_form/src/: main.rs
widgets/todo_list/: Cargo.toml  build.rs
widgets/todo_list/src/: main.rs
widgets/todo_list/ui/: form.ui  resources.qrc
