[package]
name = "lights"
version = "0.0.0"
authors = ["Kevin Ottens <ervin@kde.org>", "Pavel Strakhov <ri@idzaaus.org>"]
edition = "2018"
publish = false
description = "Qt examples"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-qt/examples"

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_3d_core = "0.5.0"
qt_3d_render = "0.5.0"
qt_3d_input = "0.5.0"
qt_3d_logic = "0.5.0"
qt_3d_extras = "0.5.0"
