[package]
name = "hello_qml"
version = "0.0.0"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
edition = "2018"
publish = false
description = "Qt examples"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-qt/examples"

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_qml = "0.5.0"

[build-dependencies]
qt_ritual_build = "0.5.0"
